# aegissec

./: .editorconfig  .env.example  .gitignore  .mcp.json  .prettierignore  AGENTS.md  README.md  TODO.md  ad_content.txt  docker-compose.yml  mkdocs_base64.txt  requirements.txt
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_module_a_baseline.py  0002_project_settings.py  0003_chat_core_upgrade.py  0004_chat_event_lease_upgrade.py  0005_generation_step_timeline.py  0006_terminal_sessions_phase1.py  0007_performance_composite_indexes.py  README.md
apps/api/app/: main.py
apps/api/app/agent/: memory.py  (+41 more)
apps/api/tests/: conftest.py  test_alembic.py  test_assistant_wave_runtime.py  test_auth.py  test_chat_runtime.py  test_compact_runtime.py  test_continuation_store.py  test_db_bootstrap.py  test_db_session.py  test_event_persistence.py  test_graph_builders.py  test_graph_service.py  test_graphs.py  test_harness_executor.py  test_harness_governance.py  test_harness_phase3.py  test_harness_scheduling.py  test_harness_swarm.py  test_health.py  test_llm_rate_limit.py  test_logging_middleware.py  test_mcp.py  test_mcp_client_manager.py  test_memory_service.py  test_module_e_integration.py  test_p2_reserves.py  test_pattt_catalog.py  test_pattt_runtime.py  test_projects.py  test_prompting.py  test_query_engine.py  test_repository_performance_fixes.py  test_runtime.py  test_sessions.py  test_settings.py  test_settings_api.py  test_skill_governance.py  test_skill_resolution.py  test_skill_service_resolution.py  test_skills.py  (+10 more)
(+466 files in other folders)
